rig/llm-d/overlays/wide-ep-multinode/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm-d-ep-inference
  namespace: llm-d
  labels:
    app: llm-d
    component: wide-ep-multinode
  annotations:
    argocd.argoproj.io/sync-wave: "25"
spec:
  parentRefs:
    - name: infra-ep-inference-gateway
      namespace: llm-d
  rules:
    - backendRefs:
        - group: inference.networking.k8s.io
          kind: InferencePool
          name: gaie-ep
          port: 8000
          weight: 1
